<resources>
    <string name="app_name">Book Registration</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Registration</string>
    <string name="title_activity_book_Detail">Detail</string>
    <string name="title_activity_book_list">My Books</string>

    <string name="register_your_book_here">Register your Book here!</string>
    <string name="book_registration">Book Registration</string>
    <string name="search">Search</string>
    <string name="search_by_name_book">Search by Name Book</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="my_books">My Books</string>
    <string name="configuration">Configuration</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="editora">Editora</string>
</resources>
